# cmake-example

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  b.sh  build.sh  conanfile.txt
.github/workflows/: codeql.yml  cpp-format.yml  cpp-lint.yml
include/: fibonacci.hpp
src/: CMakeLists.txt  fibonacci.cpp  main.cpp
test/: BenchmarkMain.cpp  CMakeLists.txt  TestMain.cpp
